playground/ombi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  labels:
    app: ombi
spec:
  selector:
    matchLabels:
      app: ombi
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: ombi
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - image: linuxserver/ombi
        imagePullPolicy: Always
        name: ombi-container
        ports:
        - containerPort: 3579
        readinessProbe:
          tcpSocket:
            port: 3579
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3579
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - mountPath: /config
          name: ombi-config
      volumes:
      - name: ombi-config
        persistentVolumeClaim:
          claimName: ombi-config
