playground/ombi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  labels:
    app: ombi
spec:
  ports:
    - name: ombi-http
      port: 3579
      protocol: TCP
  selector:
    app: ombi
